--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,10 +1,10 @@
 {
     "_yes": "Yes",
-    "_no": "No",    
+    "_no": "No",
     "DASHBOARD": {
         "_title": "DOME Marketplace is out! See what's new",
-        "_header": "Digital Trust to move forward",
-        "_subheader": "Join the first open distributed marketplace ecosystem for cloud, edge & AI services in europe.",
+        "_header": "Trustworhty Smart Ports Digital Services",
+        "_subheader": "IDOM Marketplace is part of the DOME open distributed marketplace ecosystem for cloud, edge & AI services in europe.",
         "_new": "New",
         "_learn_more": "Learn more",
         "_video": "Watch video",
@@ -171,7 +171,7 @@
         "_home": "Home",
         "_catalogs": "Catalogues",
         "_search": "Search",
-        "_browse": "Browse",        
+        "_browse": "Browse",
         "_cloud": "Cloud Services",
         "_smart_ports": "Smart ports",
         "_smart_cities": "Smart cities",
@@ -191,7 +191,7 @@
         "_publish": "Publish your service",
         "_register": "Register",
         "_guidelines": "Guidelines",
-        "_onboarding": "Onboarding",    
+        "_onboarding": "Onboarding",
         "_about": "About DOME",
         "_verify": "Verify and publish",
         "_info": "Info"
@@ -697,7 +697,7 @@
         "_add_relationship": "Add new relationship",
         "_save_relationship": "Save relationship",
         "_profile_pic": "Profile picture",
-        "_finish": "Finish",        
+        "_finish": "Finish",
         "_summary": "Product's summary",
         "_create_prod": "Create product",
         "_choose_license": "Choose a license",
@@ -794,7 +794,7 @@
         "_add_relationship": "Add new relationship",
         "_save_relationship": "Save relationship",
         "_profile_pic": "Profile picture",
-        "_finish": "Update product",        
+        "_finish": "Update product",
         "_summary": "Product's summary",
         "_create_prod": "Create product",
         "_choose_license": "Choose a license",
@@ -910,7 +910,7 @@
         "_steps": "Steps",
         "_general": "General",
         "_general_info": "Category's general information",
-        "_finish": "Create category",        
+        "_finish": "Create category",
         "_summary": "Category's summary",
         "_name": "Name",
         "_description": "Description",
@@ -931,7 +931,7 @@
         "_steps": "Steps",
         "_general": "General",
         "_general_info": "Category's general information",
-        "_finish": "Update category",        
+        "_finish": "Update category",
         "_summary": "Category's summary",
         "_name": "Name",
         "_description": "Description",
