--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,7 +3,7 @@
     "_no": "No",
     "DASHBOARD": {
         "_title": "DOME Marketplace is out! See what's new",
-        "_header": "Trustworhty Smart Ports Digital Services",
+        "_header": "Trustworthy Smart Ports Digital Services",
         "_subheader": "IDOM Marketplace is part of the DOME open distributed marketplace ecosystem for cloud, edge & AI services in europe.",
         "_new": "New",
         "_learn_more": "Learn more",
