ADDS ficodes theme

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,8 +3,8 @@
     "_no": "No",
     "DASHBOARD": {
         "_title": "DOME Marketplace is out! See what's new",
-        "_header": "Trustworthy Smart Ports Digital Services",
-        "_subheader": "IDOM Marketplace is part of the DOME open distributed marketplace ecosystem for cloud, edge & AI services in europe.",
+        "_header": "Trustworthy Cloud & Edge Digital Services",
+        "_subheader": "FICODES Marketplace is part of the DOME open distributed marketplace ecosystem for cloud, edge & AI services in europe.",
         "_new": "New",
         "_learn_more": "Learn more",
         "_video": "Watch video",
