FIX optimization on services' results now not calling twice the API + FIX Ticket#832070 + FIX catalogues' internationalization title

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -233,7 +233,8 @@
         "_no_desc": "No description included",
         "_no_cat": "No categories included",
         "_view_details": "View details",
-        "_desc": "Description"
+        "_desc": "Description",
+        "_choose": "Choose between our Catalogues"
     },
     "SHOPPING_CART": {
         "_buy": "Buy",
